--- a/docs/_posts/2020-10-08-Blog_5.markdown
+++ b/docs/_posts/2020-10-08-Blog_5.markdown
@@ -7,7 +7,7 @@ categories: jekyll update
 
 
 <h2>Introduction</h2>
-All though I thought I had little to discuss last blog regarding CIT, this week has been even less productive. While I have made progress in my computer science class, it was involving yet another HTML/CSS project. I have chosen to not talk about the same topic two postings in a row. Perhaps I will revisit the content of that class when we move on to browser scripts. This week beyond that I have been attending to my other non-major classes, so I have little to talk about that is both scholastic and technical. As a result, I will go over a personal project I recently did that does fit the technical aspect but not the scholastic one.
+Although I thought I had little to discuss last blog regarding CIT, this week has been even less productive. While I have made progress in my computer science class, it was involving yet another HTML/CSS project. I have chosen to not talk about the same topic two postings in a row. Perhaps I will revisit the content of that class when we move on to browser scripts. This week beyond that I have been attending to my other non-major classes, so I have little to talk about that is both scholastic and technical. As a result, I will go over a personal project I recently did that does fit the technical aspect but not the scholastic one.
 
 <h2>The Task</h2>
 There is a video game named Fight Night Round 2 released in 2005 on the Nintendo GameCube, PlayStation 2 and Xbox. The GameCube version of the game included a guest character named Little Mac from the Nintendo Punch-Out!! series. I am really into 3d printing and I wanted to get my hands on the 3d model of this character. The problem is that no common 3d model extractor in the community had bothered with this old 2005 clunky boxing game. This blog will detail the process I went through in order to acquire and optimize this model.
